Update codes according to code review